--- a/Documentation/0x02.md
+++ b/Documentation/0x02.md
@@ -21,8 +21,8 @@
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 2. Транзакционность и надёжность
-* **Блок:** 2.1 MVCC (Compressed Chains + Snapshot Isolation)
+* **Пакет:** 2 — Транзакционность и надёжность
+* **Блок:** 2.1 — MVCC (Compressed Chains + Snapshot Isolation)
 
 ---
 
@@ -201,8 +201,8 @@ state MVCC_Entry {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 2. Транзакционность и надёжность
-* **Блок:** 2.2 Уровни изоляции транзакций (Read Committed, Repeatable Read, Snapshot Isolation, Serializable)
+* **Пакет:** 2 — Транзакционность и надёжность
+* **Блок:** 2.2 — Уровни изоляции транзакций (Read Committed, Repeatable Read, Snapshot Isolation, Serializable)
 
 ---
 
@@ -388,8 +388,8 @@ state "Уровень изоляции" as IsolationLevel {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 2. Транзакционность и надёжность
-* **Блок:** 2.3 Журналирование WAL (Write-Ahead Logging)
+* **Пакет:** 2 — Транзакционность и надёжность
+* **Блок:** 2.3 — Журналирование WAL (Write-Ahead Logging)
 
 ---
 
@@ -572,8 +572,8 @@ stop
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 2. Транзакционность и надёжность
-* **Блок:** 2.4 Восстановление после сбоя и Snapshot-based Recovery
+* **Пакет:** 2 — Транзакционность и надёжность
+* **Блок:** 2.4 — Восстановление после сбоя и Snapshot-based Recovery
 
 ---
 
@@ -761,8 +761,8 @@ package "2.4 Восстановление" {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 2. Транзакционность и надёжность
-* **Блок:** 2.5 Механизм фоновой очистки (Garbage Collection)
+* **Пакет:** 2 — Транзакционность и надёжность
+* **Блок:** 2.5 — Механизм фоновой очистки (Garbage Collection)
 
 ---
 
