--- a/Documentation/0x00.md
+++ b/Documentation/0x00.md
@@ -10,8 +10,8 @@
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 0. Инициализация и системный старт
-* **Блок:** 0.1 Точка входа (main)
+* **Пакет:** 0 — Инициализация и системный старт
+* **Блок:** 0.1 — Точка входа (main)
 
 ---
 
