--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -35,8 +35,8 @@
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.1 Инициализация конфигурации (config\_init)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.1 — Инициализация конфигурации (config\_init)
 
 ---
 
@@ -216,8 +216,8 @@ package "1.1 Инициализация конфигурации" {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.2 Инициализация логирования (log\_init)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.2 — Инициализация логирования (log\_init)
 
 ---
 
@@ -416,8 +416,8 @@ LogInterface <|.. log_event_t
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.3 Инициализация сети (network\_init)е
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.3 — Инициализация сети (network\_init)е
 
 ---
 
@@ -595,8 +595,8 @@ package "1.3 Инициализация сети" {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.4 Инициализация WAL (журнал предзаписи)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.4 — Инициализация WAL (журнал предзаписи)
 
 ---
 
@@ -797,8 +797,8 @@ package "1.4 WAL (журнал предзаписи)" {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.5 Восстановление снимка (Snapshot Recovery)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.5 — Восстановление снимка (Snapshot Recovery)
 
 ---
 
@@ -992,8 +992,8 @@ snapshot_header_t --> snapshot_record_t : содержит записи
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.6 Инициализация каталога таблиц (catalog\_init)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.6 — Инициализация каталога таблиц (catalog\_init)
 
 ---
 
@@ -1174,8 +1174,8 @@ class catalog_t {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.7 Планировщик распределения (distributed\_planner)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.7 — Планировщик распределения (distributed\_planner)
 
 ---
 
@@ -1359,7 +1359,7 @@ class distributed_plan_t {
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.8 Журнал транзакций (WAL — Write-Ahead Log)
+* **Блок:** 1.8 — Журнал транзакций (WAL — Write-Ahead Log)
 
 ---
 
@@ -1548,8 +1548,8 @@ class wal_buffer_t {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.9 Восстановление MVCC-цепочек (compressed chain replay)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.9 — Восстановление MVCC-цепочек (compressed chain replay)
 
 ---
 
@@ -1732,8 +1732,8 @@ class mvcc_chain_t {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.10 Снапшоты и контроль версий (Snapshot & Versioning)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.10 — Снапшоты и контроль версий (Snapshot & Versioning)
 
 ---
 
@@ -1911,8 +1911,8 @@ class tx_snapshot_t {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.11 Компактация и сжатие данных
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.11 — Компактация и сжатие данных
 
 ---
 
@@ -2096,15 +2096,7 @@ class rle_pair_t {
 [DEBUG] Удалено 1024 устаревших MVCC-записей
 ```
 
-Блок **1.11 — Компактация и сжатие данных** оформлен в формате промышленной Markdown-документации. Включены:
-
-* Техническое описание и реализация
-* Связи и зависимости
-* UML-диаграмма
-* Пример кода
-* Функции и структура API на C
-* Соответствие требованиям SAP HANA+
-* Логи и безопасность
+---
 
 # 🧱 Блок 1.12 — TTL и эвакуация данных (автоудаление устаревших записей)
 
@@ -2112,8 +2104,8 @@ class rle_pair_t {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.12 TTL и эвакуация данных (автоудаление устаревших записей)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.12 — TTL и эвакуация данных (автоудаление устаревших записей)
 
 ---
 
@@ -2296,8 +2288,8 @@ package "1.12 TTL и эвакуация" {
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.13 Буферная зона (Buffer Pool / Page Cache)
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.13 — Буферная зона (Buffer Pool / Page Cache)
 
 ---
 
@@ -2482,8 +2474,6 @@ buffer_pool_t --> page_t : содержит
 @enduml
 ```
 
-Вот промышленная документация для блока **1.14 — Авто ребалансировка и распределение (Auto Rebalancing)**:
-
 ---
 
 # 🧱 Блок 1.14 — Авто ребалансировка и распределение (Auto Rebalancing)
@@ -2492,8 +2482,8 @@ buffer_pool_t --> page_t : содержит
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.14 Авто ребалансировка и распределение
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.14 — Авто ребалансировка и распределение
 
 ---
 
@@ -2683,18 +2673,14 @@ rebalance_plan_t --> shard_info_t : source / target
 
 ---
 
-Вот промышленная документация для блока **1.15 — Распределённый планировщик (Distributed Planner)**:
-
----
-
 # 🧱 Блок 1.15 — Распределённый планировщик (Distributed Planner)
 
 ---
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.15 Распределённый планировщик
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.15 — Распределённый планировщик
 
 ---
 
@@ -2880,18 +2866,14 @@ distributed_plan_t --> plan_fragment_t : fragments
 
 ---
 
-Вот подробная промышленная документация на блок **1.16 — Сжатие и декомпрессия (Compression Engine)**:
-
----
-
 # 🧱 Блок 1.16 — Сжатие и декомпрессия (Compression Engine)
 
 ---
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.16 Сжатие и декомпрессия
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.16 — Сжатие и декомпрессия
 
 ---
 
@@ -3082,8 +3064,8 @@ wal --> compressed_block_t
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.16 Сжатие и декомпрессия
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.16 — Сжатие и декомпрессия
 
 ---
 
@@ -3280,8 +3262,8 @@ wal --> compressed_block_t
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.17 Индексы и адаптивная индексация
+* **Пакет:** 1 — Архитектура и Хранилище
+* **Блок:** 1.17 — Индексы и адаптивная индексация
 
 ---
 
@@ -3466,14 +3448,16 @@ index_t --> index_entry_t
 * Дельтовые индексы для snapshot
 * Гибридные структуры: bitmap + btree
 
+---
+
 # 🧱 Блок 1.18 — Write-Ahead Logging (WAL) и снапшоты
 
 ---
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
-* **Блок:** 1.18 Write-Ahead Logging (WAL) и снапшоты
+* **Пакет:** 1 —  Архитектура и Хранилище
+* **Блок:** 1.18 — Write-Ahead Logging (WAL) и снапшоты
 
 ---
 
@@ -3649,7 +3633,16 @@ class wal_record_t {
 * WAL compression (zstd/brotli)
 * Перенос снапшотов в NVMe tier с TTL-контролем
 
-# 🆔 Блок 1.19 — Жизненный цикл страниц и отслеживание модификаций (Page Lifecycle, Dirty Bits, LRU/ARC)
+---
+
+# 🧱 Блок 1.18 — Жизненный цикл страниц и отслеживание модификаций (Page Lifecycle, Dirty Bits, LRU/ARC)
+
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 1 —  Архитектура и Хранилище
+* **Блок:** 1.18 — Жизненный цикл страниц и отслеживание модификаций (Page Lifecycle, Dirty Bits, LRU/ARC)
 
 ---
 
